--- a/resources/assets/css/login.css
+++ b/resources/assets/css/login.css
@@ -234,8 +234,7 @@ a:hover {
 
 
 /*guojiang club login*/
-body{background-color: #F05D39}
-
+body{background-color: #2BC0BE}
 .login-left{width: 50%; display: flex;
     height: 100%;
     float: left;
