Revert "登录后默认页面果酱的营销内容"
This reverts commit 670bf509801fa124fdb7766085dc8f895d84c117.

--- a/resources/assets/css/login.css
+++ b/resources/assets/css/login.css
@@ -121,13 +121,12 @@ a:hover {
 }
 .logo {
     margin-bottom: 40px;
-    text-align: center;
 }
 .login-form .login-box {
     padding: 33px 25px;
 }
 .login-form .login-box .logo img{
-    width: 50%;
+    width: 100%;
 }
 
 .login-form .login-box .inptu-box {
@@ -147,7 +146,6 @@ a:hover {
 .code-box {
     display: flex;
     align-content: center;
-    margin-bottom: 20px;
 }
 .login-form .login-box .code-box input {
     margin-bottom: 0;
@@ -156,7 +154,7 @@ a:hover {
 .login-form .login-box .code-box .code {
     cursor: pointer;
     flex: 1;
-    background: #EF462A;
+    background: #2BC0BE;
     color: #ffffff;
     font-size: 12px;
     text-align: center;
@@ -166,7 +164,7 @@ a:hover {
 }
 .login {
     cursor: pointer;
-    background: #EF462A;
+    background: #2BC0BE;
     color: #ffffff;
     text-align: center;
     line-height: 40px;
@@ -246,7 +244,7 @@ body{background-color: #2BC0BE}
 
 .login-right{width: 50%; display: flex;
     height: 100%;
-    background: #F05D39;
+    background: #2BC0BE;
     align-items: center; /* 垂直居中 */
     justify-content: center; /* 水平居中 */
 }
