--- a/resources/assets/css/login.css
+++ b/resources/assets/css/login.css
@@ -1,232 +1,390 @@
+、
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
+article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
+ol,ul{list-style:none;margin:0px;padding:0px;}
+blockquote,q{quotes:none;}
+blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}
+table{border-collapse:collapse;border-spacing:0;}
 
-*{
-    margin: 0;
-    padding: 0;
-}
-html {
-    height: 100%;
-    background: #1c202d;
-}
-body{
-    height: 100%;
-    background: #1c202d;
+a{text-decoration:none;}
+.txt-rt{text-align:right;}
+.txt-lt{text-align:left;}
+.txt-center{text-align:center;}
+.float-rt{float:right;}
+.float-lt{float:left;}
+.clear{clear:both;}
+.pos-relative{position:relative;}
+.pos-absolute{position:absolute;}
+.vertical-base{vertical-align:baseline;}
+.vertical-top{vertical-align:top;}
+nav.vertical ul li{display:block;}
+nav.horizontal ul li{display: inline-block;}
+img{max-width:100%;}
 
-}
-a, address, b, big, blockquote, body, center, cite, code, dd, del, div, dl, dt, em, fieldset, font, form, h1, h2, h3, h4, h5, h6, html, i, iframe, img, ins, label, legend, li, ol, p, pre, small, span, strong, u, ul, var {
-    margin: 0;
-    padding: 0
-}
-
-ol, ul {
-    list-style: none
-}
-
-:focus {
-    outline: 0
-}
-
-a img {
-    border: 0
-}
-
-img {
-    vertical-align: middle
+body {
+    background:url('../img/bg.jpg') no-repeat 0px 0px;
+    background-size: cover;
+    font-family: 'Open Sans', sans-serif;
+    background-attachment: fixed;
+    background-position: center;
 }
 
-table {
-    empty-cells: show
+body a {
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    -ms-transition: 0.5s all;
 }
 
-ins {
-    text-decoration: none
-}
-
-del {
-    text-decoration: line-through
-}
-
-em {
-    font-style: normal
-}
-
-button::-moz-focus-inner, input[type=button]::-moz-focus-inner, input[type=file] > input[type=button]::-moz-focus-inner, input[type=reset]::-moz-focus-inner, input[type=submit]::-moz-focus-inner {
-    border: 0;
-    padding: 0
-}
-
-.hide {
-    display: none
-}
-
-a {
-    color: #666;
-    text-decoration: none
-}
-
-a:hover {
-    color: #E4393C;
-    text-decoration: underline
-}
-
-.w {
-    width: 990px;
-    margin: 0 auto
-}
-
-#banner-bg {
-    background: url('../img/brand_02.png') 0px 0px no-repeat;
-}
-#content {
-    clear: both
-}
-#content .login-wrap {
-    margin-top: 0
-}
-
-#content .tips-wrapper {
-    background: #fff8f0;
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    text-align: center
-}
-
-#content .tips-wrapper .cont-wrapper {
-    display: inline-block;
-    *display: inline;
-    width: 90%
-}
-
-#content .tips-wrapper .tips-inner p {
-    vertical-align: middle;
-    color: #999;
-    font-size: 12px;
-    display: inline-block;
-    *display: inline
-}
-
-#content .tips-wrapper .tips-inner .black {
-    color: #333
-}
-
-
-
-.login-form {
-    position: relative;
-    z-index: 4;
-    background: #fff;
-    overflow: visible;
-    width: 400px;
-    border-radius: 4px;
-}
-.logo {
-    margin-bottom: 40px;
-}
-.login-form .login-box {
-    padding: 33px 25px;
-}
-.login-form .login-box .logo img{
-    width: 100%;
-}
-
-.login-form .login-box .inptu-box {
-    width: 100%;
-}
-
-.login-form .login-box .inptu-box input {
-    width: 100%;
-    height: 40px;
-    border-radius: 4px;
-    outline: none;
-    padding: 0 10px;
-    box-sizing: border-box;
-    border: 1px solid #A0A0A0;
-    margin-bottom: 22px;
-}
-.code-box {
-    display: flex;
-    align-content: center;
-}
-.login-form .login-box .code-box input {
-    margin-bottom: 0;
-    width: 60%;
-}
-.login-form .login-box .code-box .code {
-    cursor: pointer;
-    flex: 1;
-    background: #2BC0BE;
-    color: #ffffff;
-    font-size: 12px;
+h1 {
+    color: #FFF;
     text-align: center;
-    border-radius: 2px;
-    margin-left: 20px;
-    line-height: 40px;
+    letter-spacing: 6px;
+    font-size: 40px;
+    margin-top: 75px;
 }
-.login {
-    cursor: pointer;
-    margin-top: 22px;
-    background: #2BC0BE;
-    color: #ffffff;
+
+.container {
+    width: 32%;
+    margin: 50px auto;
     text-align: center;
-    line-height: 40px;
-    border-radius: 2px;
-    width: 100%;
-    border: none;
+    background:rgba(0, 0, 0, 0.43);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
 
-.login-wrap {
-    position: relative;
-    height: 475px;
-    margin: 10px 0 20px;
-    z-index: 5
+h2 {
+    font-size:	30px;
+    color: #FFF;
+    padding-top: 45px;
+    letter-spacing:3px;
+}
+form {
+    padding: 65px;
 }
 
-.login-wrap .login-banner {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 475px;
-    background: #1C202D
-}
-
-.login-wrap .i-inner {
-    position: relative;
-    z-index: 3;
-    height: 475px
-}
-
-.login-wrap .login-form {
-    float: right;
-    top: 40px
-}
-
-
-
-.clearfix {
-    zoom: 1;
-}
-.hello-box {
-    margin-top: 80px;
-}
-.hello {
-    font-size: 56px;
-}
-
-.login-wrap .text-box {
-    margin-left: 100px;
-    font-size: 16px;
-    position: relative;
-    z-index: 10;
-    color: #ffffff;
+form span {
+    width: 23%;
     float: left;
-    height: 365px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    background: #fed14e;
+    padding: 10.2px 10px;
+    position: relative;
+    color: #005377;
+    font-size: 15px;
+    letter-spacing: 1px;
 }
 
-.info {
-    color: #555555;
-    font-size: 14px;
+form button {
+    width: 23%;
+    float: right;
+    background: #fed14e;
+    padding: 10.2px 10px;
+    position: relative;
+    color: #005377;
+    font-size: 15px;
+    letter-spacing: 1px;
+}
+
+form span:after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    right: -11px;
+    border-top: 6px solid rgba(0, 0, 0, 0);
+    border-left: 11px solid #fed14e;
+    border-bottom: 6px solid rgba(0, 0, 0, 0);
+    top: 14px;
+}
+input.name {
+    width: 65%;
+    padding:10px 10px 10px 15px;
+    border: none;
+    outline: none;
+    font-size: 17px;
+    letter-spacing: 1px;
+    margin-bottom: 35px;
+    float:left;
+}
+
+input.password {
+    width: 65%;
+    padding:10px 10px 10px 15px;
+    border: none;
+    outline: none;
+    font-size: 17px;
+    letter-spacing: 1px;
+    margin-bottom: 35px;
+    float:left;
+}
+
+input.code {
+    width: 30%;
+    padding:10px 10px 10px 15px;
+    border: none;
+    outline: none;
+    font-size: 17px;
+    letter-spacing: 1px;
+    margin-bottom: 35px;
+    float:left;
+}
+
+
+.rem-for-agile{
+    width:50%;
+    float:left;
+    text-align:left;
+    font-size:13px;
+    color:rgb(238, 223, 179);
+}
+.rem-for-agile a{
+    color:rgb(238, 223, 179);
+    margin-top:3px;
+    display:inline-block;
+    padding-left:18px;
+}
+.rem-for-agile a:hover{
+    color: #fff;
+}
+input[type="checkbox"] {
+    margin: 10px 5px 0px 0px;
+    vertical-align: sub;
+}
+
+.login-w3{
+    width:50%;
+    float:right;
+}
+input[type="submit"]{
+    background-color:#005377;
+    color:#fff;
+    padding:11px;
+    outline: none;
+    border:none;
+    font-size: 17px;
+    width:50%;
+    cursor:pointer;
+    margin-top:5px;
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    -ms-transition: 0.5s all;
+}
+input[type="submit"]:hover{
+    background:#fed14e;
+    color:#000;
+
+}
+.footer-w3l{
+    margin-top: 150px;
+    margin-bottom: 20px;
+}
+.footer-w3l p {
+    color:white;
+    text-align:center;
+    font-size:13px;
+    letter-spacing:1px;
+}
+.footer-w3l a{
+    color:white;
+    text-decoration:none;
+}
+.footer-w3l a:hover{
+    text-decoration:underline;
+}
+@media screen and (max-width: 1440px) {
+    form span {
+        font-size:14px;
+        padding:10.5px 10px;
+    }
+    input.name{
+        width: 63%;
+    }
+    input.password {
+        width: 63%;
+    }
+    input.code {
+        width: 12%;
+    }
+
+}
+@media screen and (max-width: 1366px) {
+    .container {
+        width: 37%;
+    }
+
+}
+
+@media screen and (max-width: 1080px) {
+    .container {
+        width: 46%;
+    }
+
+
+}
+@media screen and (max-width: 991px) {
+    h1{
+        margin-top:50px;
+    }
+    .container {
+        width: 52%;
+    }
+
+}
+
+
+@media screen and (max-width: 800px) {
+    .container {
+        width: 63%;
+    }
+    form {
+        padding: 55px;
+    }
+
+}
+
+@media screen and (max-width: 736px) {
+    h1 {
+        letter-spacing: 4px;
+        font-size: 35px;
+    }
+    h2 {
+        font-size: 28px;
+        padding-top: 35px;
+        letter-spacing: 2px;
+    }
+
+}
+@media screen and (max-width: 667px) {
+    .container {
+        width: 66%;
+    }
+    form {
+        padding: 53px;
+    }
+
+}
+@media screen and (max-width: 640px) {
+    form {
+        padding: 42px;
+    }
+}
+@media screen and (max-width: 600px) {
+    .container {
+        width: 70%;
+    }
+}
+@media screen and (max-width: 568px) {
+    .container {
+        width: 74%;
+    }
+}
+@media screen and (max-width: 480px) {
+    h1 {
+        letter-spacing: 2px;
+        font-size: 31px;
+    }
+    .container {
+        width: 78%;
+    }
+    form {
+        padding: 30px;
+    }
+    input.name {
+        width: 62%;
+    }
+    input.password{
+        width: 62%;
+    }
+    input[type="submit"] {
+        margin-top:8px;
+    }
+}
+@media screen and (max-width: 414px) {
+    .container {
+        width: 85%;
+    }
+    form span {
+        font-size: 12px;
+    }
+    input.name {
+        width: 58.5%;
+        padding: 9px 9px 9px 15px;
+    }
+    input.password{
+        width: 58.5%;
+        padding: 9px 9px 9px 15px;
+    }
+    .footer-w3l p {
+        letter-spacing:0;
+    }
+}
+
+@media screen and (max-width: 384px) {
+    form span {
+        width: 25%;
+    }
+    input.name {
+        width: 57.5%;
+    }
+    input.password{
+        width: 57.5%;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    h1 {
+        font-size: 27px;
+    }
+    h2 {
+        font-size: 24px;
+    }
+    input.name {
+        width: 57%;
+    }
+    input.password{
+        width: 57%;
+    }
+    form span{
+        padding-left:5px;
+    }
+
+}
+@media screen and (max-width: 320px) {
+    h1 {
+        font-size: 23px;
+        letter-spacing:1px;
+    }
+    h2 {
+        font-size: 19px;
+        letter-spacing:1px;
+        padding-top:25px;
+    }
+    form {
+        padding: 20px;
+    }
+    form span {
+        font-size: 11px;
+        width:27%;
+    }
+    input.name {
+        padding: 8px 9px 8px 15px;
+        width:55%;
+    }
+    input.password {
+        padding: 8px 9px 8px 15px;
+        width:55%;
+    }
+    .rem-for-agile{
+        font-size:11px;
+    }
+    input[type="submit"] {
+        padding: 9px;
+        font-size: 16px;
+        width: 60%;
+        margin-top:10px;
+    }
 }
