--- a/resources/assets/css/login.css
+++ b/resources/assets/css/login.css
@@ -1,4 +1,3 @@
-、
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
 article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
 ol,ul{list-style:none;margin:0px;padding:0px;}
@@ -22,11 +21,9 @@ nav.horizontal ul li{display: inline-block;}
 img{max-width:100%;}
 
 body {
-    background:url('../img/bg.jpg') no-repeat 0px 0px;
     background-size: cover;
     font-family: 'Open Sans', sans-serif;
-    background-attachment: fixed;
-    background-position: center;
+    background: url('https://aliyuncdn.jiaomaip.com/uploads/bg.jpg ') no-repeat fixed center;
 }
 
 body a {
